infra/k8s/catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-deployment   
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
    spec:
      containers:
        - name: catalog
          image: vipulpatodi/easyshop-catalog-service:latest
          imagePullPolicy: Always 
          ports:
            - containerPort: 8080

          volumeMounts:
            - name: catalog-storage
              mountPath: /data

          volumes:
            - name: catalog-storage
              persistentVolumeClaim:
                claimName: catalog-pvc
