infra/k8s/identity-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity
  template:
    metadata:
      labels:
        app: identity
    spec:
      containers:
        - name: identity
          image: easyshop-identity-service
          imagePullPolicy: Never
          ports:
            - containerPort: 80
