infra/k8s/react-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
        - name: react
          image: vipulpatodi/easyshop-ui-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
