infra/k8s/cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
  type: ClusterIP
  selector:
    app: cart
  ports:
    - port: 80
      targetPort: 80
