infra/k8s/catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
spec:
  type: NodePort
  selector:
    app: catalog
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30008
