infra/k8s/identity-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-service
spec:
  type: ClusterIP
  selector:
    app: identity-service
  ports:
    - port: 80
      targetPort: 80
