infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: easyshop-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: catalog-service
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 80
                  
          - path: /api/auth
            pathType: Prefix
            backend:
                service:
                  name: identity-service
                  port:
                    number: 80
